refactor(user-edge-service): 使用 Java 11 isBlank() 和新的 HTTPClient