@@ -4,16 +4,15 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.cache.Cache;
 import com.google.common.cache.CacheBuilder;
 import com.yourtion.micro.thrift.user.dto.UserDTO;
-import org.apache.commons.lang.StringUtils;
 import org.apache.http.HttpStatus;
-import org.apache.http.client.methods.HttpPost;
-import org.apache.http.impl.client.HttpClientBuilder;
-
 import javax.servlet.*;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
-import java.io.InputStream;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.util.concurrent.TimeUnit;
 
 public abstract class LoginFilter implements Filter {
@@ -34,7 +33,7 @@ public abstract class LoginFilter implements Filter {
         var response = (HttpServletResponse) servletResponse;
 
         var token = request.getParameter("token");
-        if (StringUtils.isBlank(token)) {
+        if (token.isBlank()) {
             var cookies = request.getCookies();
             for (var c : cookies) {
                 if (c.getName().equals("token")) {
@@ -44,7 +43,7 @@ public abstract class LoginFilter implements Filter {
         }
 
         UserDTO userDTO = null;
-        if (StringUtils.isNotBlank(token)) {
+        if (!token.isBlank()) {
             userDTO = cache.getIfPresent(token);
             if (userDTO == null) {
                 userDTO = requestUserInfo(token);
@@ -67,34 +66,17 @@ public abstract class LoginFilter implements Filter {
     private UserDTO requestUserInfo(String token) {
         String url = "http://127.0.0.1:8082/user/authentication";
 
-        var client = HttpClientBuilder.create().build();
-        var post = new HttpPost(url);
-        InputStream inputStream = null;
-        post.addHeader("token", token);
+        var client = HttpClient.newHttpClient();
+        var post = HttpRequest.newBuilder().uri(URI.create(url)).POST(null).header("token", token).build();
         try {
-            var response = client.execute(post);
-            if (response.getStatusLine().getStatusCode() != HttpStatus.SC_OK) {
-                throw new RuntimeException("request user info failed! statusLine:" + response.getStatusLine());
+            var response = client.send(post, HttpResponse.BodyHandlers.ofString());
+            if (response.statusCode() != HttpStatus.SC_OK) {
+                throw new RuntimeException("request user info failed! statusLine:" + response.statusCode());
             }
-            var sb = new StringBuffer();
-            inputStream = response.getEntity().getContent();
-            var temp = new byte[1024];
-            int len = 0;
-            while ((len = inputStream.read(temp)) > 0) {
-                sb.append(new String(temp, len));
-            }
-            var userDTO = new ObjectMapper().readValue(sb.toString(), UserDTO.class);
+            var userDTO = new ObjectMapper().readValue(response.body(), UserDTO.class);
             return userDTO;
-        } catch (IOException e) {
+        } catch (Exception e) {
             e.printStackTrace();
-        } finally {
-            if (inputStream != null) {
-                try {
-                    inputStream.close();
-                } catch (IOException e) {
-                    e.printStackTrace();
-                }
-            }
         }
 
         return null;
